--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:requestLegacyExternalStorage="true"
             android:theme="@style/AppTheme">
         <meta-data
                 android:name="xposedmodule"
-                android:value="SinaAdAway"/>
+                android:value="true"/>
         <meta-data
                 android:name="xposeddescription"
                 android:value="我只想好好刷微博!"/>
